--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <div id="main">
       <div class="heading">
         <h1>QUIZ-POP</h1>
+        <p>This is an interesting quiz session</p>
       </div>
     </div>
     <script type="module" src="js/index.js"></script>
