--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
     <div id="main">
       <div class="heading">
         <h1>QUIZ-POP</h1>
-        <p>This is an interesting quiz session</p>
       </div>
+      <div id="button"><button>BEGIN THE QUIZ</button></div>
     </div>
+    <div id="question-container"></div>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
